try serializing DefIds using rustc_serialize

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "prusti-common",
     "prusti-interface",
     "prusti-viper",
+    "prusti-serialize",
     "prusti-server",
     "prusti-launch",
     "prusti-utils",
